# HTTPServer

./: .gitignore  CMakeLists.txt  README.md
include/: config.h  http.h  logger.h  network.h  platform.h  server.h  utility.h
public/: file.txt  webpage.html
src/: http.c  logger.c  main.c  network.c  server.c  utility.c
